# course_work_7

./: .coverage  .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_city_alter_user_email_alter_user_image_and_more.py
